--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -33,3 +33,9 @@ body {
   font-weight: 300;
   line-height: 1.6;
 }
+
+.container {
+  display: grid;
+  grid-template-rows: 80vh min-content 40vw repeat(3, min-content);
+  // ^^ auto instead of min-content would be ok too(and it's default)
+}
