--- a/sass/_features.scss
+++ b/sass/_features.scss
@@ -4,7 +4,33 @@
   margin: 15rem 0;
 
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  // grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+  // ^^ autofit creates as many tracks as we can fit based on the width
+  // so it kind of makes it responsive even without any media queries
+
   // grid-template-rows: auto auto;  default
   grid-gap: 6rem;
+  align-items: start; // so that no huge break between header and text
+  // ^^ it is set to stretch by default so we need to change it manually
+}
+
+.feature {
+  display: grid;
+  grid-template-columns: min-content 1fr;
+  grid-row-gap: 1.5rem;
+  grid-column-gap: 2.5rem;
+  // ^^ auto instead of min-content would be ok too
+
+  &__icon {
+    fill: $color-primary; // fill because svg
+    width: 4.5rem;
+    height: 4.5rem;
+    grid-row: 1 / span 2;
+    transform: translateY(-1rem); // moving icon a little bit up
+  }
+
+  &__text {
+    font-size: 1.7rem;
+  }
 }
