--- a/sass/_story.scss
+++ b/sass/_story.scss
@@ -6,6 +6,25 @@
 
   &__content {
     background-color: $color-grey-light-1;
-    grid-column: col-end 4 / full-end;
+    grid-column: col-start 5 / full-end;
+
+    padding: 6rem 8vw;
+
+    // FLEX WAY
+    // display: flex;
+    // flex-direction: column;
+    // justify-content: center;
+    // align-items: flex-start;
+
+    // GRID WAY
+    display: grid;
+    align-content: center;
+    justify-items: start;
+  }
+
+  &__text {
+    font-size: 1.5rem;
+    font-style: italic;
+    margin-bottom: 4rem;
   }
 }
