--- a/sass/_features.scss
+++ b/sass/_features.scss
@@ -1,6 +1,5 @@
 .features {
   grid-column: center-start / center-end;
-
   margin: 15rem 0;
 
   display: grid;
@@ -11,8 +10,7 @@
 
   // grid-template-rows: auto auto;  default
   grid-gap: 6rem;
-  align-items: start; // so that no huge break between header and text
-  // ^^ it is set to stretch by default so we need to change it manually
+  align-items: start;
 }
 
 .feature {
@@ -20,14 +18,13 @@
   grid-template-columns: min-content 1fr;
   grid-row-gap: 1.5rem;
   grid-column-gap: 2.5rem;
-  // ^^ auto instead of min-content would be ok too
 
   &__icon {
-    fill: $color-primary; // fill because svg
+    fill: $color-primary;
     width: 4.5rem;
     height: 4.5rem;
     grid-row: 1 / span 2;
-    transform: translateY(-1rem); // moving icon a little bit up
+    transform: translateY(-1rem);
   }
 
   &__text {
