--- a/sass/_homes.scss
+++ b/sass/_homes.scss
@@ -1,4 +1,12 @@
 .homes {
-  background-color: $color-secondary;
   grid-column: center-start / center-end;
+  display: grid;
+  margin: 15rem 0;
+  grid-template-columns: repeat(auto-fit, minmax(25rem, 1fr));
+  // ^^ 'auto-fit' as many columns as it can fit in the container
+  grid-gap: 7rem;
+}
+
+.home {
+  background-color: $color-grey-light-1;
 }
