--- a/sass/_story.scss
+++ b/sass/_story.scss
@@ -11,7 +11,7 @@
     display: grid;
     grid-template-rows: repeat(6, 1fr);
     grid-template-columns: repeat(6, 1fr);
-    align-items: center; // images have their default settings that sometimes affect their positioning
+    align-items: center;
   }
 
   &__img--1 {
