--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -12,10 +12,10 @@
   padding-top: 4rem;
 
   display: grid;
-  grid-template-rows: 1fr min-content 6rem 1fr;
-  grid-template-columns: max-content; // so that this column does not occupy all the space
-  justify-content: center;
+  grid-template-rows: 1fr min-content minmax(6rem, min-content) 1fr;
+  grid-template-columns: minmax(min-content, max-content);
   grid-row-gap: 1.5rem;
+  justify-content: center;
 
   &__logo {
     height: 3rem;
@@ -34,14 +34,14 @@
     align-items: center;
 
     font-size: 1.6rem;
-    color: $color-grey-light-2; // *****
+    color: $color-grey-light-2;
 
     &::before,
     &::after {
       content: "";
       height: 1px;
       display: block;
-      background-color: currentColor; // it will use the color above
+      background-color: currentColor;
     }
   }
 
@@ -50,9 +50,11 @@
     grid-template-columns: repeat(4, 1fr);
     grid-column-gap: 3rem;
     justify-items: center;
+    align-items: center;
 
     img {
-      height: 2.5rem;
+      max-height: 2.5rem;
+      max-width: 100%;
       filter: brightness(70%);
     }
   }
