:recycle::iphone: Added media queries to the sidebar and header

--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -50,7 +50,7 @@
     grid-template-columns: repeat(4, 1fr);
     grid-column-gap: 3rem;
     justify-items: center;
-    align-items: center;
+    align-items: center; // individual item in each cell
 
     img {
       max-height: 2.5rem;
