--- a/sass/_realtors.scss
+++ b/sass/_realtors.scss
@@ -21,10 +21,7 @@
     align-items: center;
 
     @media only screen and (max-width: $bp-medium) {
-      grid-template-columns: repeat(
-        3,
-        min-content max-content
-      ); // image-text image-text image-text
+      grid-template-columns: repeat(3, min-content max-content);
     }
   }
 
